# song.rs

./: CLAUDE.md  Cargo.toml  README.md
benches/: bandwidth.rs
examples/: gen_samples.rs  optimize_vowels.rs  play.rs  sweep_duration.rs
src/: decoder.rs  encoder.rs  fft.rs  formant.rs  lib.rs  phy.rs  protocol.rs  reed_solomon.rs  rs4.rs  stream.rs
tests/: cross_compat.rs  phy.rs  robustness.rs  stream.rs
