[package]
name = "ggwave-voice"
version = "0.1.0"
edition = "2021"
description = "Voice-formant FSK codec — encode data as vowel-like audio that survives noise cancellation"
license = "MIT"

[dependencies]
rustfft = "6"
thiserror = "2"

[dev-dependencies]
hound = "3"
criterion = { version = "0.5", features = ["html_reports"] }
nnnoiseless = "0.5"

[[bench]]
name = "bandwidth"
harness = false
