[package]
name = "song-rs"
version = "0.1.0"
edition = "2021"
description = "Voice-formant acoustic modem — encode data as vowel-like audio that survives noise cancellation"
license = "MIT"

[features]
default = []
8khz = []  # Use 8 kHz sample rate instead of 48 kHz

[dependencies]
rustfft = "6"
thiserror = "2"

[dev-dependencies]
hound = "3"
criterion = { version = "0.5", features = ["html_reports"] }
nnnoiseless = "0.5"

[[bench]]
name = "bandwidth"
harness = false
